cuidar-connect/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect-service
spec:
  selector:
    io.kompose.service: connect
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8000
  type: ClusterIP
